# Multimodal-RAG

./: .env.template  README.md  main.ipynb  multimodal_rag_system.ipynb  rag_system.ipynb
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  health.py  upload.py
backend/app/core/: config.py  database.py
backend/app/models/: chat.py  document.py  user.py
backend/app/services/: document_processor.py  llm_service.py  rag_service.py  vector_store.py
