[tool.poetry]
name = "chikucare"
version = "0.1.0"
description = "Multimodal RAG for pet cat related issues"
authors = ["Gauransh Sharma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
pillow = "^10.1.0"
chromadb = "^0.4.18"
sentence-transformers = "^2.2.2"
google-generativeai = "^0.3.2"
transformers = "^4.36.0"
torch = "^2.1.1"
langchain = "^0.0.345"
pandas = "^2.1.4"
numpy = "^1.24.3"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiofiles = "^23.2.0"
httpx = "^0.25.2"
pypdf2 = "^3.0.1"
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "google.generativeai.*",
    "transformers.*",
    "torch.*",
    "langchain.*"
]
ignore_missing_imports = true